# practic_2_sem

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE
.cache/clangd/index/: main.cpp.257C83613C1B3D04.idx  main.cpp.2A8237FDDEA665B0.idx  main.cpp.458DB105B8F5BA1D.idx  mod.cpp.164F3604BAE3BD34.idx  mod.cpp.28714D663DFD5B35.idx  mod.cpp.F9BE57AB649809BE.idx  mod.h.758981E4D4A24982.idx  mod.h.9329927D53AD33FD.idx  mod.h.D5FA90278A97A2F4.idx
task1/: main.cpp  mod.cpp  mod.h  task1.slnx  task1.vcxproj  task1_check.mw
task1/task1/x64/Debug/: task1.exe.recipe  task1.ilk  vc145.idb
task1/task1/x64/Debug/task1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  task1.lastbuildstate
task2/: main.cpp  mod.cpp  mod.h  task2.slnx  task2.vcxproj
task2/task2/x64/Debug/: task2.exe.recipe  task2.ilk  vc145.idb
task2/task2/x64/Debug/task2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  task2.lastbuildstate
task3/: main.cpp  mod.cpp  mod.h  task3.slnx  task3.vcxproj
task3/task3/x64/Debug/: task3.exe.recipe  task3.ilk  vc145.idb
task4/: data.txt  main.cpp  mod.cpp  mod.h  task4.vcxproj
task5/: data.txt  main.cpp  mod.cpp  mod.h  task5.slnx  task5.vcxproj
task6/: main.cpp  mod.cpp  mod.h  task6.slnx  task6.vcxproj  task6.vcxproj.filters
task7/: main.cpp  mod.cpp  mod.h  pars.txt  prog  rect.txt  task7.slnx  task7.vcxproj
(+11 files in other folders)
